op3: Adjust display power settings
 * Enable ULPS
 * Allow PHY powerdown during idle screen
 * Disable LP11

Change-Id: Idc8728a87afaa8659a9ad2b8655ad9a4ab043bde

--- a/arch/arm/boot/dts/qcom/msm8996-oneplus.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-oneplus.dtsi
@@ -391,8 +391,8 @@
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply_amoled_no_labibb>;
 	qcom,esd-check-enabled;
 	qcom,mdss-dsi-panel-status-check-mode = "te_signal_check";
-	qcom,mdss-dsi-lp11-init;
-	qcom,mdss-dsi-init-delay-us = <10000>;
+	qcom,ulps-enabled;
+	qcom,panel-allow-phy-poweroff;
 };
 
 &dsi_samsung_s6e3fa5_1080p_cmd {
@@ -400,8 +400,8 @@
 	qcom,panel-supply-entries = <&dsi_panel_pwr_supply_amoled_no_labibb>;
 	qcom,esd-check-enabled;
 	qcom,mdss-dsi-panel-status-check-mode = "te_signal_check";
-	qcom,mdss-dsi-lp11-init;
-	qcom,mdss-dsi-init-delay-us = <10000>;
+	qcom,ulps-enabled;
+	qcom,panel-allow-phy-poweroff;
 };
 
 /{
@@ -1295,10 +1295,6 @@
 };
 
 // msm8996-mdss.dtsi
-&mdss_mdp {
-	/delete-property/ qcom,mdss-idle-power-collapse-enabled;
-};
-
 &mdss_dsi0 {
 	//guozhiming modify for lcd 2015-10-15
 	oled-vdda-supply = <&pm8994_s5>;
